--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -59,7 +59,7 @@
             <a class="btn btn-small btn-warning no-pjax" href="{% url "link_create" %}">New Link</a>
         </div>
         <ul class="nav pull-right"><li class="divider-vertical"></li></ul>
-        {% search_form %}
+        {% search_form "main.Link" %}
         {% nevercache %}
         {% include "accounts/includes/user_panel_nav.html" %}
         {% endnevercache %}
