--- a/main/templates/main/link_detail.html
+++ b/main/templates/main/link_detail.html
@@ -14,7 +14,7 @@
     <p class="description">{{ object.description }}</p>
     <div class="link-meta">
         {% rating_for object %}
-        by <a href="{% url "profile" object.user.username %}">{{ object.user.profile }}</a>
+        by <a href="{% url "profile" object.user.username %}" title="The number in bracket's is the user's karma. It increases when their links or comments are upvoted.">{{ object.user.profile }}</a>
         {{ object.publish_date|short_timesince }} ago
     </div>
     {% order_comments_by_score_for object %}
