--- a/main/templates/accounts/includes/user_panel_nav.html
+++ b/main/templates/accounts/includes/user_panel_nav.html
@@ -1,25 +1,31 @@
 {% load i18n future mezzanine_tags %}
 
-<ul class="nav pull-right"><li class="divider-vertical"></li></ul>
-
-<div class="pull-right">
-    {% if request.user.is_authenticated %}
-    <a href="{% url "logout" %}?next={{ request.path }}"
-        class="btn btn-primary btn-small">{% trans "Log out" %}</a>
-    {% else %}
-    <a href="{% url "login" %}?next={{ request.path }}"
-        class="btn btn-primary btn-small">{% trans "Log in" %}</a>
-    <a href="{% url "signup" %}?next={{ request.path }}"
-        class="btn btn-primary btn-small">{% trans "Sign up" %}</a>
-    {% endif %}
-</div>
-
+<li class="dropdown">
 {% if request.user.is_authenticated %}
-<ul class="nav pull-right">
     {% url "profile" request.user.username as profile_url %}
     {% if not profile_url %}{% url "profile_update" as profile_url %}{% endif %}
-    <li><a href="{{ profile_url }}">{{ request.user.profile }}</a></li>
-</ul>
+    <a href="{{ profile_url }}" data-toggle="dropdown" class="dropdown-toggle disabled">
+		{{ request.user.profile }} <b class="caret"></b></a>
+    <ul class="dropdown-menu" data-no-collapse="true">
+	    <li><a href="{{ profile_url }}">Profile</a><li>
+	    <li><a href="/accounts/update">Settings</a></li>
+        <li><a href="{% url "logout" %}?next={{ request.path }}"
+        class="">{% trans "Log out" %}</a></li>
+	</ul>
+	
+{% else %}
+    <a href="{% url "login" %}?next={{ request.path }}" data-toggle="dropdown" class="dropdown-toggle">
+		{% trans "Log in" %} <b class="caret"></b></a>
+	<ul class="dropdown-menu">
+	    <li><a href="{% url "login" %}?next={{ request.path }}"
+        class="">{% trans "Log in" %}</a></li>
+		<li><a href="{% url "signup" %}?next={{ request.path }}"
+        class="">{% trans "Sign up" %}</a></li>
+	</ul>
+	
 {% endif %}
+</li>
+
+
 
 
