--- a/main/templates/includes/search_form.html
+++ b/main/templates/includes/search_form.html
@@ -1,7 +1,6 @@
 {% load mezzanine_tags i18n future %}
-<form action="{% url "search" %}" class="navbar-search pull-right input-append">
-
-<input class="search-query" placeholder="{% trans "Search" %}" type="text" name="q" value="{{ request.REQUEST.q }}">
+<form action="{% url "search" %}" class="navbar-form pull-right ">
+<input class="" placeholder="{% trans "Search" %}" type="text" name="q" value="{{ request.REQUEST.q }}">
 
 {% if search_model_choices %}
     {% if search_model_choices|length == 1 %}
@@ -19,6 +18,6 @@
     {% endif %}
 {% endif %}
 
-<input type="submit" class="btn" value="{% trans "Go" %}">
+<input type="submit" class="btn btn-default" value="{% trans "Go" %}">
 
 </form>
