--- a/main/templates/main/link_form.html
+++ b/main/templates/main/link_form.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
-{% block meta_title %}New Link{% endblock %}
-{% block title %}New Link{% endblock %}
+{% block meta_title %}New link / thread{% endblock %}
+{% block title %}New link / thread{% endblock %}
 
 {% load mezzanine_tags %}
 
 {% block main %}
+<p>Leave the "Link" field blank in order to start a new forum thread (please do not duplicate).</p>
 <form method="post">
 <fieldset>{% fields_for form %}</fieldset>
 <div class="actions">
-    <input class="btn btn-warning btn-large" type="submit" value="Submit New Link">
+    <input class="btn btn-warning btn-large" type="submit" value="Submit">
 </div>
 
 </form>
